--- a/book-network-ui/tsconfig.json
+++ b/book-network-ui/tsconfig.json
@@ -3,6 +3,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@models/*": [
+        "app/service/models/*"
+      ]
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
