login and register for frontend complete

--- a/book-network-ui/angular.json
+++ b/book-network-ui/angular.json
@@ -91,6 +91,7 @@
               }
             ],
             "styles": [
+              "node_modules/angular-code-input/styles.css",
               "src/styles.scss"
             ],
             "scripts": []
