--- a/book-network-ui/package.json
+++ b/book-network-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
     "ng-openapi-gen": "^0.53.0",
     "rxjs": "~7.8.0",
